// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`quizHelper getBlankQuest should return blank 1`] = `
Object {
  "choice_0": "",
  "choice_1": "",
  "choice_2": "",
  "question": "",
  "subject": "",
}
`;

exports[`quizHelper getQuestFromProps should return blank if quest is undefined 1`] = `Object {}`;

exports[`quizHelper getQuestFromProps should return new object 1`] = `
Object {
  "choice_0": "c0",
  "choice_1": "c1",
  "choice_2": "c2",
  "question": "question",
  "subject": "subject",
}
`;

exports[`quizHelper getQuizStatefromQuest should return state with blank if quest is new object 1`] = `
Object {
  "choice_0": "",
  "choice_1": "",
  "choice_2": "",
  "isEditing": Object {
    "choice_0": false,
    "choice_1": false,
    "choice_2": false,
    "question": false,
    "subject": false,
  },
  "question": "",
  "subject": "",
}
`;

exports[`quizHelper getQuizStatefromQuest should return state with data 1`] = `
Object {
  "choice_0": "c0",
  "choice_1": "c1",
  "choice_2": "c2",
  "isEditing": Object {
    "choice_0": false,
    "choice_1": false,
    "choice_2": false,
    "question": false,
    "subject": false,
  },
  "question": "question",
  "subject": "subject",
}
`;
